# ScenicPathfinder

./: .gitignore  Filelist.md  README.md  app.py  build.bat  launcher.py  launcher.spec  main.py  pyproject.toml
context/: __init__.py
exceptions/: __init__.py
hooks/: hook.py
models/config/: __init__.py
models/data/: __init__.py
models/graph/: __init__.py
pages/: __init__.py  home.py
pages/admin/: add_path.py  add_spot.py  modify_path.py  modify_spot.py  remove_path.py  remove_spot.py
pages/debug/: data_view.py  generate_data.py
pages/guest/: find_all_simple_path.py  find_shortest_path.py  find_spot.py  get_plan.py  view_map.py
