[project]
name = "scenicpathfinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
    "pyinstaller>=6.17.0",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
